# wallet-service

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  db.py
app/wallet_service/: auth.py  exception_handler.py  models.py  routes.py  schemas.py  utils.py
